Make new dimension button the same size as eternity button, add a break to avoid flickering

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1140,8 +1140,8 @@ screen and (max-width: 480px) {
 
 .o-primary-btn--new-dim {
   font-weight: bold;
-  width: 20rem;
-  height: 6rem;
+  width: 21rem;
+  height: 7rem;
 }
 
 .o-primary-btn--quick-reset {
